--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "wrangler deploy",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,6 +14,8 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.15.2",
+    "@cloudflare/workers-types": "^4.20251126.0",
     "@tailwindcss/vite": "^4.1.17",
     "@vitejs/plugin-react": "^5.1.1",
     "tailwindcss": "^4.1.17",
