--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,4 +6,18 @@
   "assets": {
     "not_found_handling": "single-page-application"
   },
+  "durable_objects": {
+    "bindings": [
+      {
+        "name": "USER_DATA_DO",
+        "class_name": "UserData"
+      }
+    ]
+  },
+  "migrations": [
+    {
+      "tag": "001-add-user-data-do",
+      "new_sqlite_classes": ["UserData"]
+    }
+  ]
 }
