--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.15.2",
-    "@cloudflare/workers-types": "^4.20251126.0",
     "@tailwindcss/vite": "^4.1.17",
     "@vitejs/plugin-react": "^5.1.1",
     "tailwindcss": "^4.1.17",
+    "typescript": "^5.7.3",
     "vite": "^7.2.4",
     "wrangler": "^4.50.0"
   }
