--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,14 +7,38 @@ on:
     branches:
       - main
 jobs:
-  build_and_deploy:
+  # build_and_deploy:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - run: npm ci && npm run build:fb
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: ${{ secrets.GITHUB_TOKEN }}
+  #         firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DGCLOUDTEST }}
+  #         channelId: live
+  #         projectId: dgcloudtest
+  deploy_hosting_and_functions:
     runs-on: ubuntu-latest
+    env:
+      GOOGLE_APPLICATION_CREDENTIALS: ${{ runner.temp }}/firebase-key.json
+      PROJECT_ID: dgcloudtest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DGCLOUDTEST }}
-          channelId: live
-          projectId: dgcloudtest
+          node-version: 22
+      - name: Install firebase-tools
+        run: npm install -g firebase-tools
+      - name: Write service account key
+        run: |
+          printf "%s" "${{ secrets.FIREBASE_SERVICE_ACCOUNT_DGCLOUDTEST }}" > "$GOOGLE_APPLICATION_CREDENTIALS"
+      - name: Install root dependencies
+        run: npm ci
+      - name: Install functions dependencies
+        run: npm ci --prefix functions
+      - name: Build frontend and functions
+        run: npm run build:fb
+      - name: Deploy Hosting and Functions
+        run: firebase deploy --only hosting,functions --project "$PROJECT_ID"
