--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "vite build",
+    "build:cf": "vite build",
+    "build:fb": "npm --prefix functions run build && vite build",
     "dev:cf": "vite",
-    "dev:fb": "npm --prefix functions run build && npm run build && firebase emulators:start --only hosting,functions,firestore",
-    "deploy:cf": "npm run build && wrangler deploy",
-    "deploy:fb": "npm run build && firebase deploy --only hosting,functions"
+    "dev:fb": "npm run build:fb && firebase emulators:start --only hosting,functions,firestore",
+    "deploy:cf": "npm run build:cf && wrangler deploy",
+    "deploy:fb": "npm run build:fb && firebase deploy --only hosting,functions"
   },
   "dependencies": {
     "react": "^19.2.0",
