Fix Firebase action

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:fb": "npm --prefix functions run build && vite build",
     "dev:cf": "vite",
     "dev:fb": "npm run build:fb && firebase emulators:start --only hosting,functions,firestore",
-    "deploy:cf": "wrangler deploy",
+    "deploy:cf": "npm run build:cf && wrangler deploy",
     "deploy:fb": "firebase deploy --only hosting,functions"
   },
   "dependencies": {
