--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
         "destination": "/index.html"
       }
     ],
-    "predeploy": "vite build"
+    "predeploy": "npx vite build"
   },
   "functions": [
     {
